# Backend.NodeSql.EducationApp/routes/admin/setup/form.route.js
@@ -8,5 +8,6 @@ const router = express.Router();
 router.get('/admin/form/GetFormDetails/:PK_FormId/:RowperPage/:CurrentPage/:SearchBy/:SearchValue', setupController.GetFormDetails);
 router.post('/admin/form/AddEditFormDetails', setupController.AddEditFormDetails);
 router.delete('/admin/form/DeleteFormsDetails', setupController.DeleteFormsDetails);
+router.get('/admin/form/GetAllParentFormsList', setupController.GetAllParentFormsList);
 
 module.exports = router
